recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: identifier expected but ')' found.
		gauche(angle.)
                             ^